Add text and color variables, icons and images

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,12 @@
+@import "./fonts";
 @import "./reset";
 @import "./variables/global";
 
 body {
   margin: 0;
+}
+
+h1 {
+  font: var(--heading1);
+  color: var(--text-brand);
 }
