--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -11,19 +11,15 @@
 
 input,
 button,
-textarea {
+textarea,
+select {
+  margin: 0;
   color: inherit;
 }
 
 a {
   text-decoration: none;
   color: inherit;
-}
-
-h1,
-h2,
-h3 {
-  font-weight: 700;
 }
 
 li {
