Create main page desktop layout

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,10 +3,5 @@
 @import "./variables/global";
 
 body {
-  margin: 0;
-}
-
-h1 {
-  font: var(--heading1);
-  color: var(--text-brand);
+  color: var(--text-black);
 }
