--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,12 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
+html {
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 input,
