Add background images to the main page

--- a/src/widgets/personal-account/ui/styles.module.scss
+++ b/src/widgets/personal-account/ui/styles.module.scss
@@ -1,6 +1,5 @@
 .bb__pa {
   margin: 44px 0;
-  padding: 48px;
   border-radius: 12px;
   background-color: var(--brand-light);
 
@@ -13,7 +12,21 @@
     flex: 1;
   }
 
+  &_img {
+    max-height: 515px;
+    padding: 32px 48px 48px;
+
+    & > img {
+      aspect-ratio: 1 / 1;
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   &_details {
+    padding: 48px;
+
     & > h3 {
       font:
         700 28px/32px "Inter",
@@ -31,8 +44,8 @@
       gap: 12px;
 
       & > span:first-child {
-        width: 36px;
-        height: 36px;
+        width: 48px;
+        height: 48px;
         background-color: var(--bg-white);
         border-radius: 50%;
         display: grid;
