--- a/src/widgets/conditions/ui/conditions-card/styles.module.scss
+++ b/src/widgets/conditions/ui/conditions-card/styles.module.scss
@@ -3,7 +3,12 @@
   display: grid;
   place-items: center;
   font: var(--heading5);
-  padding: 38px 0;
+  padding: 38px 24px;
   border: 1px solid var(--border-grey);
   border-radius: 8px;
+  white-space: nowrap;
+
+  @media only screen and (min-width: 768px) {
+    padding: 24px;
+  }
 }
