--- a/src/widgets/container/ui/styles.module.scss
+++ b/src/widgets/container/ui/styles.module.scss
@@ -3,4 +3,8 @@
   padding: 0 100px;
   margin: 0 auto;
   height: 100%;
+
+  @media only screen and (max-width: 1200px) {
+    padding: 0 20px;
+  }
 }
