--- a/src/widgets/how-it-works/ui/styles.module.scss
+++ b/src/widgets/how-it-works/ui/styles.module.scss
@@ -1,17 +1,26 @@
 .bb__hit {
   padding: 44px 0;
 
+  @media only screen and (max-width: 768px) {
+    padding: 28px;
+  }
+
   & > h2 {
     font:
       700 28px/32px "Inter",
       sans-serif;
     margin-bottom: 24px;
     text-align: center;
+
+    @media only screen and (max-width: 768px) {
+      font: var(--heading3);
+      text-align: left;
+    }
   }
 
   &_cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 8px;
   }
 }
