--- a/src/widgets/requirement/ui/styles.module.scss
+++ b/src/widgets/requirement/ui/styles.module.scss
@@ -1,16 +1,32 @@
 .bb__requirement {
   padding: 44px 0;
 
+  @media only screen and (max-width: 768px) {
+    padding: 28px 0;
+  }
+
   & > h2 {
     font:
       700 28px/32px "Inter",
       sans-serif;
     margin-bottom: 36px;
+
+    @media only screen and (max-width: 768px) {
+      font: var(--heading3);
+    }
   }
 
   &_wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(540px, 1fr));
     gap: 8px;
+
+    @media only screen and (max-width: 650px) {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    @media only screen and (max-width: 414px) {
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
   }
 }
