--- a/src/widgets/calculator/ui/calculator-form/styles.module.scss
+++ b/src/widgets/calculator/ui/calculator-form/styles.module.scss
@@ -80,6 +80,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
+    @media only screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
+
     &_item_l,
     &_item_r {
       padding: 12px 16px;
@@ -88,14 +92,21 @@
 
       & > span:first-child {
         font: var(--font-sm);
+        white-space: nowrap;
       }
     }
 
     &_item_l {
       border-right: 1px solid var(--border-grey);
 
+      @media only screen and (max-width: 768px) {
+        border-right: none;
+        border-bottom: 1px solid var(--border-grey);
+      }
+
       & > span:last-child {
         font: var(--heading4);
+        white-space: nowrap;
       }
     }
 
@@ -103,6 +114,7 @@
       & > span:last-child {
         font: var(--heading4);
         color: var(--special-green);
+        white-space: nowrap;
       }
     }
   }
