--- a/src/widgets/conditions/ui/conditions-card/styles.module.scss
+++ b/src/widgets/conditions/ui/conditions-card/styles.module.scss
@@ -8,7 +8,7 @@
   border-radius: 8px;
   white-space: nowrap;
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (max-width: 768px) {
     padding: 24px;
   }
 }
