--- a/src/widgets/navbar/ui/styles.module.scss
+++ b/src/widgets/navbar/ui/styles.module.scss
@@ -17,6 +17,10 @@
     padding: 6px;
     border-radius: 8px;
     background-color: var(--brand-primary);
+
+    &.open {
+      margin-right: 13px;
+    }
   }
 
   &_logo {
@@ -30,6 +34,12 @@
     padding: 2px;
     background-color: var(--bg-grl);
     border: 1px solid var(--border-grey);
+
+    &.mobile {
+      margin-bottom: 36px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
 
     & > button {
       padding: 6px 12px;
@@ -45,6 +55,17 @@
     display: flex;
     align-items: center;
     gap: 8px;
+
+    &.mobile {
+      flex-direction: column;
+      gap: 12px;
+
+      & > a {
+        align-self: stretch;
+        text-align: center;
+        padding: 12px 20px;
+      }
+    }
 
     & > a {
       padding: 6px 12px;
