Create get_money and identity pages

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -43,6 +43,7 @@
   --bg-grey: ##e8e8e8;
   --bg-grl: ##f4f4f4;
   --bg-white: #fff;
+  --bg-bluish: #e2eaff;
 
   --text-black: #0b1022;
   --text-grey: #7d7d7d;
