Create mobile get_money and inentity pages

--- a/src/pages/get-money/ui/gm-form/styles.module.scss
+++ b/src/pages/get-money/ui/gm-form/styles.module.scss
@@ -21,12 +21,22 @@
   &_title {
     font: var(--heading2);
     margin-bottom: 12px;
+
+    @media only screen and (max-width: 768px) {
+      font:
+        700 28px/32px "Inter",
+        sans-serif;
+    }
   }
 
   &_text {
     font: var(--font-md);
     margin-bottom: 48px;
     text-align: center;
+
+    @media only screen and (max-width: 768px) {
+      margin-bottom: 24px;
+    }
   }
 
   &_form {
@@ -45,6 +55,10 @@
       border-radius: 8px;
       outline: none;
       border: 1px solid var(--border-grey);
+
+      @media only screen and (max-width: 768px) {
+        margin-bottom: 200px;
+      }
     }
 
     & button[type="submit"] {
@@ -60,10 +74,18 @@
 
     & input[type="checkbox"] {
       transform: translateY(4px);
+
+      @media only screen and (max-width: 768px) {
+        transform: translateY(2px);
+      }
     }
 
     & > p {
       font: var(--font-md);
+
+      @media only screen and (max-width: 768px) {
+        font: var(--font-sm);
+      }
 
       & > a {
         color: var(--text-brand);
