Create first pages of the cms

--- a/src/pages/requests/ui/req-all/req-all-item/styles.module.scss
+++ b/src/pages/requests/ui/req-all/req-all-item/styles.module.scss
@@ -14,4 +14,25 @@
     font: var(--font-md);
     margin-right: 36px;
   }
+
+  &_req,
+  &_res {
+    font: var(--heading5);
+  }
+
+  &_res.green {
+    color: var(--special-green);
+  }
+
+  &_res.red {
+    color: var(--special-red);
+  }
+
+  &_res.orange {
+    color: var(--special-orange);
+  }
+
+  &_res.grey {
+    color: var(--text-grey);
+  }
 }
