Add mobile sidebar

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -41,7 +41,7 @@
   /* COLORS */
   --bg-black: ##0b1022;
   --bg-grey: ##e8e8e8;
-  --bg-grl: ##f4f4f4;
+  --bg-grl: #f4f4f4;
   --bg-white: #fff;
   --bg-bluish: #e2eaff;
 
