--- a/src/pages/requests/ui/styles.module.scss
+++ b/src/pages/requests/ui/styles.module.scss
@@ -2,4 +2,10 @@
   padding: 36px 0;
   display: flex;
   gap: 64px;
+
+  @media only screen and (max-width: 900px) {
+    padding: 22px 0;
+    flex-direction: column;
+    gap: 22px;
+  }
 }
