--- a/src/widgets/sidebar/ui/sidebar-item/styles.module.scss
+++ b/src/widgets/sidebar/ui/sidebar-item/styles.module.scss
@@ -1,13 +1,15 @@
 .bb__navlink_wrap {
   & > a {
-    padding: 12px 16px;
+    display: inline-block;
     font: var(--heading5);
     display: inline-block;
+    padding: 12px 16px;
+    border-radius: 8px;
     width: 100%;
+    height: 100%;
 
     &.active {
       background-color: var(--brand-light);
-      border-radius: 8px;
     }
   }
 }
