--- a/src/widgets/sidebar/ui/styles.module.scss
+++ b/src/widgets/sidebar/ui/styles.module.scss
@@ -5,4 +5,21 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+
+  &_mobile {
+    overflow-x: auto;
+    overflow-y: hidden;
+    cursor: grab;
+    display: grid;
+    grid-gap: 2px;
+    grid-template-columns: repeat(5, min-content);
+    padding: 2px;
+    border: 1px solid var(--border-grey);
+    background-color: var(--bg-grl);
+    border-radius: 6px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
