--- a/src/pages/requests/ui/req-all/application/styles.module.scss
+++ b/src/pages/requests/ui/req-all/application/styles.module.scss
@@ -1,6 +1,12 @@
 .bb__req_application {
   &_wrapper {
     flex: 1;
+
+    & > button {
+      @media only screen and (max-width: 768px) {
+        display: none;
+      }
+    }
   }
 
   &_inner {
@@ -16,16 +22,45 @@
       align-items: baseline;
       gap: 24px;
 
-      & > h2 {
+      @media only screen and (max-width: 768px) {
+        gap: 16px;
+        align-items: flex-start;
+      }
+
+      & > button {
+        @media only screen and (min-width: 768px) {
+          display: none;
+        }
+      }
+
+      & > div {
+        @media only screen and (max-width: 768px) {
+          display: flex;
+          flex-direction: column;
+          gap: 0;
+          margin-bottom: 16px;
+        }
+      }
+
+      & h2 {
         font:
           700 28px/32px "Inter",
           sans-serif;
         margin-bottom: 24px;
+
+        @media only screen and (max-width: 768px) {
+          font: var(--heading3);
+          margin-bottom: 0;
+        }
       }
     }
 
     &_answer {
       font: var(--heading5);
+
+      @media only screen and (max-width: 768px) {
+        font: var(--font-sm);
+      }
 
       &.bb__green {
         color: var(--special-green);
@@ -143,6 +178,10 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
 
     & dt {
       font: var(--font-sm);
