--- a/src/pages/requests/ui/req-personal/req-personal-card/styles.module.scss
+++ b/src/pages/requests/ui/req-personal/req-personal-card/styles.module.scss
@@ -2,12 +2,29 @@
   &_wrapper {
     flex: 1;
     max-width: 280px;
+  }
+
+  &_title {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: flex-start;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: row;
+      align-items: baseline;
+    }
 
     & > h2 {
       font:
         700 28px/32px "Inter",
         sans-serif;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
+
+      @media only screen and (max-width: 768px) {
+        font: var(--heading3);
+        margin-bottom: 0;
+      }
     }
   }
 
