--- a/src/pages/requests/ui/req-personal/styles.module.scss
+++ b/src/pages/requests/ui/req-personal/styles.module.scss
@@ -7,6 +7,11 @@
         700 28px/32px "Inter",
         sans-serif;
       margin-bottom: 24px;
+
+        @media only screen and (max-width: 768px) {
+          font: var(--heading3);
+          margin-bottom: 16px;
+        }
     }
   }
 
