--- a/src/pages/requests/ui/req-profile/req-profile-item/styles.module.scss
+++ b/src/pages/requests/ui/req-profile/req-profile-item/styles.module.scss
@@ -7,10 +7,20 @@
   align-items: center;
   justify-content: space-between;
 
+  @media only screen and (max-width: 768px) {
+    align-items: flex-start;
+  }
+
   &_wrap {
     display: flex;
     align-items: center;
     gap: 36px;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+    }
   }
 
   &_val {
