Create the auto application page

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -39,11 +39,12 @@
   --heading1: 700 var(--h1-size) / var(--h1-line) var(--font-family);
 
   /* COLORS */
-  --bg-black: ##0b1022;
-  --bg-grey: ##e8e8e8;
+  --bg-black: #0b1022;
+  --bg-grey: #e8e8e8;
   --bg-grl: #f4f4f4;
   --bg-white: #fff;
   --bg-bluish: #e2eaff;
+  --bg-warn: #fff5e1;
 
   --text-black: #0b1022;
   --text-grey: #7d7d7d;
