Fix issues main page

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -55,6 +55,7 @@
   --brand-primary: #064cff;
   --brand-secondary: #0034b9;
   --brand-light: #edf3fc;
+  --brand-hover: #5C8AFF;
 
   --border-black: #0f0f0f;
   --border-grey: #e2e2e2;
