--- a/src/features/drawer/ui/styles.module.scss
+++ b/src/features/drawer/ui/styles.module.scss
@@ -6,19 +6,17 @@
   padding: 29px 16px;
   background-color: var(--bg-white);
   height: 100%;
+  width: 100%;
   overflow: auto;
   position: fixed;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   transition: transform var(--transition-speed) ease;
   z-index: 1000;
 }
 
 .bb__drawer.top {
   top: 80px;
-  left: 0;
   right: 0;
-  width: 100%;
-  transform: translateY(-100%);
+  transform: translateX(100%);
 }
 
 .bb__drawer_container.in.open .top {
