--- a/src/shared/ui/button/ui/styles.module.scss
+++ b/src/shared/ui/button/ui/styles.module.scss
@@ -5,8 +5,24 @@
 
 .btn_primary {
   background-color: var(--brand-primary);
-  border: 1px solid var(--brand-primary);
   color: var(--text-white);
+  border: none;
+  transition:
+    background-color 0.2s ease,
+    border 0.2s ease,
+    opacity 0.2s ease;
+
+  &:hover {
+    background-color: var(--brand-secondary);
+  }
+
+  &:focus {
+    border: 1px solid var(--border-black);
+  }
+
+  &:disabled {
+    opacity: 0.2;
+  }
 }
 
 .btn_outline,
@@ -14,12 +30,28 @@
   background-color: transparent;
   border: 1px solid var(--border-grey);
   color: var(--text-black);
+  transition:
+    background-color 0.2s ease,
+    border 0.2s ease,
+    opacity 0.2s ease;
+
+  &:hover {
+    background-color: var(--bg-grl);
+  }
+
+  &:focus {
+    border: 1px solid var(--border-black);
+  }
+
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 .btn_clean {
   background-color: transparent;
-  border: 1px solid transparent;
   color: var(--text-black);
+  border: none;
 }
 
 .btn_back {
@@ -29,11 +61,6 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  transition: background-color 0.2s ease;
-
-  &:hover {
-    background-color: var(--bg-grl);
-  }
 
   & > span:first-child {
     display: inline-block;
