--- a/src/widgets/calculator/ui/calculator-footer/styles.module.scss
+++ b/src/widgets/calculator/ui/calculator-footer/styles.module.scss
@@ -18,8 +18,10 @@
 
   @media only screen and (max-width: 650px) {
     gap: 10px;
-    padding: 0 20px;
+    padding: 0 28px;
     align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 28px;
   }
 
   & dd {
