--- a/src/widgets/calculator/ui/calculator-form/styles.module.scss
+++ b/src/widgets/calculator/ui/calculator-form/styles.module.scss
@@ -50,10 +50,10 @@
       position: relative;
 
       &::after {
-        content: "₽";
+        content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.6094 2.7998H9.15893C8.57821 2.7998 8.12794 3.29652 8.12794 3.88313V10.3697L5.83177 10.3698C5.25106 10.3698 4.80078 10.8665 4.80078 11.4531C4.80078 12.0397 5.25106 12.5364 5.83178 12.5364L8.12794 12.5363V15.1316L5.83177 15.1317C5.25106 15.1317 4.80078 15.6284 4.80078 16.215C4.80078 16.8016 5.25106 17.2983 5.83178 17.2983L8.12794 17.2982V19.1165C8.12794 19.7031 8.57821 20.1998 9.15893 20.1998C9.73965 20.1998 10.1899 19.7031 10.1899 19.1165V17.2982H13.6094C14.1901 17.2982 14.6404 16.8015 14.6404 16.2149C14.6404 15.6283 14.1901 15.1316 13.6094 15.1316H10.1899V12.5363H13.6094C16.1526 12.5363 18.2008 10.3407 18.2008 7.66803C18.2007 4.92842 16.0982 2.7998 13.6094 2.7998ZM16.1388 7.66809C16.1388 9.1691 14.9926 10.3697 13.6094 10.3697H10.1899V4.96645H13.6094C14.9847 4.96645 16.1388 6.14948 16.1388 7.66809Z" fill="%23969696"/></svg>');
         position: absolute;
-        top: 11px;
-        right: 11px;
+        top: 13px;
+        right: 15px;
         font:
           400 24px/32px "Inter",
           sans-serif;
@@ -70,6 +70,14 @@
       border-radius: 8px;
       outline: none;
       margin-bottom: 8px;
+
+      &:hover {
+        border: 1px solid var(--brand-hover);
+      }
+
+      &:focus {
+        border: 1px solid var(--brand-primary);
+      }
     }
   }
 
