--- a/src/widgets/calculator/ui/styles.module.scss
+++ b/src/widgets/calculator/ui/styles.module.scss
@@ -124,6 +124,10 @@
 
     &_content {
       gap: 40px;
+
+      @media only screen and (max-width: 768px) {
+      gap: 4px;
+      }
     }
   }
 }
