--- a/src/widgets/footer/ui/styles.module.scss
+++ b/src/widgets/footer/ui/styles.module.scss
@@ -19,6 +19,7 @@
 
     & > a:last-child {
       padding: 12px 20px;
+      font: var(--heading5);
     }
   }
 
@@ -28,8 +29,7 @@
     border-top: 1px solid var(--border-grey);
   }
 
-  &_banks,
-  &_info {
+  &_banks {
     padding: 24px 0;
   }
 
@@ -86,9 +86,18 @@
       display: flex;
       flex-direction: column;
 
+      @media only screen and (max-width: 768px) {
+        padding-bottom: 20px;
+        border-bottom: 1px solid var(--border-grey);
+      }
+
       & > img {
         align-self: flex-start;
         margin-bottom: 20px;
+
+        @media only screen and (max-width: 768px) {
+          margin-bottom: 4px;
+        }
       }
 
       & > a {
@@ -113,6 +122,8 @@
   }
 
   &_info {
+    padding-bottom: 24px;
+
     &_title {
       text-transform: uppercase;
       font: var(--font-md);
