--- a/src/widgets/navbar/ui/styles.module.scss
+++ b/src/widgets/navbar/ui/styles.module.scss
@@ -25,7 +25,6 @@
   }
 
   &_hamburger {
-    padding: 6px;
     border-radius: 8px;
     background-color: var(--brand-primary);
   }
@@ -38,7 +37,7 @@
 
   &_logo_btns {
     border-radius: 8px;
-    padding: 2px;
+    padding: 1px;
     background-color: var(--bg-grl);
     border: 1px solid var(--border-grey);
 
@@ -111,8 +110,12 @@
     }
 
     & > a {
-      padding: 6px 12px;
+      padding: 7px 12px;
       font: var(--heading6);
+    }
+
+    & > a:last-child {
+      padding: 8px 12px;
     }
   }
 }
