Add otp component

--- a/src/pages/requests/ui/req-profile/req-profile-mail/styles.module.scss
+++ b/src/pages/requests/ui/req-profile/req-profile-mail/styles.module.scss
@@ -100,10 +100,11 @@
   }
 
   & > span {
-    margin-bottom: 56px;
+    margin-bottom: 20px;
   }
 
   & > button {
+    margin-top: 36px;
     padding: 12px 20px;
     font: var(--heading5);
   }
