--- a/src/pages/applying/ui/applying-docs/styles.module.scss
+++ b/src/pages/applying/ui/applying-docs/styles.module.scss
@@ -1,9 +1,9 @@
 .bb__applying {
   &_wrapper {
-    max-width: 544px;
+    max-width: 616px;
     border-radius: 8px;
     border: 1px solid var(--border-grey);
-    margin: 0 auto;
+    margin: 48px auto 0;
 
     @media only screen and (max-width: 768px) {
       border: none;
