--- a/src/pages/get-money/ui/gm-form/styles.module.scss
+++ b/src/pages/get-money/ui/gm-form/styles.module.scss
@@ -69,11 +69,12 @@
 
   &_checkbox {
     display: flex;
-    gap: 8px;
     margin-bottom: 48px;
+    align-items: baseline;
 
     & input[type="checkbox"] {
-      transform: translateY(4px);
+      margin-right: 8px;
+      flex-shrink: 0;
 
       @media only screen and (max-width: 768px) {
         transform: translateY(2px);
