--- a/src/shared/ui/checkbox/ui/styles.module.scss
+++ b/src/shared/ui/checkbox/ui/styles.module.scss
@@ -4,26 +4,34 @@
   background-color: var(--bg-white);
   margin: 0;
   font: inherit;
-  width: 16px;
-  height: 16px;
-  border: 2px solid var(--brand-primary);
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--border-grey);
   border-radius: 3px;
   display: grid;
   place-content: center;
 
   &:before {
     content: "";
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 14px;
     transform: scale(0);
     transition: 100ms transform ease-in-out;
     box-shadow: inset 16px 16px var(--bg-white);
     transform-origin: bottom left;
-    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    clip-path: polygon(
+      20.4% 42.67%,
+      8.61% 57.2%,
+      44.09% 86%,
+      84.25% 18.75%,
+      71.31% 11.02%,
+      41.67% 60.64%
+    );
   }
 
   &:checked {
     background-color: var(--brand-primary);
+    border: 2px solid var(--brand-primary);
   }
 
   &:checked:before {
