--- a/src/widgets/footer/ui/styles.module.scss
+++ b/src/widgets/footer/ui/styles.module.scss
@@ -24,13 +24,8 @@
   }
 
   &_banks,
-  &_info_,
   &_links {
     border-top: 1px solid var(--border-grey);
-  }
-
-  &_banks {
-    padding: 24px 0;
   }
 
   &_details {
@@ -75,10 +70,12 @@
   &_banks {
     display: flex;
     gap: 112px;
+    padding: 24px 0;
 
     @media only screen and (max-width: 768px) {
       flex-direction: column;
-      gap: 20px;
+      gap: 0px;
+      padding: 0;
     }
 
     &_item {
@@ -87,7 +84,7 @@
       flex-direction: column;
 
       @media only screen and (max-width: 768px) {
-        padding-bottom: 20px;
+        padding: 20px 0;
         border-bottom: 1px solid var(--border-grey);
       }
 
@@ -122,7 +119,13 @@
   }
 
   &_info {
-    padding-bottom: 24px;
+    padding: 24px 0;
+    border-top: 1px solid var(--border-grey);
+
+    @media only screen and (max-width: 768px) {
+      border-top: none;
+      padding: 20px 0;
+    }
 
     &_title {
       text-transform: uppercase;
