Add otp requests to the server

--- a/src/pages/get-money/ui/gm-check-out/styles.module.scss
+++ b/src/pages/get-money/ui/gm-check-out/styles.module.scss
@@ -37,10 +37,14 @@
     }
 
     & p:last-child {
-      & span {
+      & button {
         color: var(--brand-primary);
         display: inline-block;
         margin-left: 8px;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
