--- a/src/shared/ui/button/ui/styles.module.scss
+++ b/src/shared/ui/button/ui/styles.module.scss
@@ -26,6 +26,7 @@
 
   &:disabled {
     opacity: 0.2;
+    cursor: not-allowed;
   }
 }
 
@@ -49,6 +50,7 @@
 
   &:disabled {
     opacity: 0.5;
+    cursor: not-allowed;
   }
 }
 
