--- a/src/pages/get-money/ui/gm-form/styles.module.scss
+++ b/src/pages/get-money/ui/gm-form/styles.module.scss
@@ -61,7 +61,7 @@
       }
     }
 
-    & button[type="submit"] {
+    & button {
       padding: 12px 20px;
       font: var(--heading5);
     }
@@ -75,6 +75,7 @@
     & input[type="checkbox"] {
       margin-right: 8px;
       flex-shrink: 0;
+      outline: none;
 
       @media only screen and (max-width: 768px) {
         transform: translateY(2px);
