Refactor: change requests with account

--- a/src/pages/applying/ui/applying-auto/styles.module.scss
+++ b/src/pages/applying/ui/applying-auto/styles.module.scss
@@ -34,46 +34,58 @@
     display: flex;
     gap: 12px;
     align-items: center;
-    margin-bottom: 24px;
 
     @media only screen and (max-width: 768px) {
       flex-direction: column;
     }
 
-    &_number {
+    &_inputs {
       width: 272px;
       border-radius: 8px;
       border: 1px solid var(--border-grey);
       display: grid;
-      grid-template-columns: auto 80px;
+      grid-template-columns: auto 76px;
       text-transform: uppercase;
       font: var(--font-md);
+
+      & input {
+        border-radius: 8px;
+        width: 100%;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+        font: var(--font-md);
+
+        &:placeholder {
+          color: var(--text-grey);
+          text-transform: uppercase;
+          font: var(--font-md);
+        }
+      }
+
+      & > input {
+        border-right: 1px solid var(--border-grey);
+        padding: 12px;
+      }
 
       @media only screen and (max-width: 768px) {
         width: 100%;
       }
 
-      &.not_defined {
-        color: var(--text-grey);
-      }
-
-      & > span {
-        padding: 12px;
-      }
-
-      &_code {
-        border-left: 1px solid var(--border-grey);
+      &_wrap {
         padding-left: 12px;
 
-        & > div {
-          transform: translateY(3px);
+        & > input {
+          padding-top: 5px;
         }
 
-        & > span {
-          display: inline-block;
-          transform: translateY(-3px);
-          font: var(--font-sm);
+        &_code {
           position: relative;
+          font:
+            400 12px/12px "Inter",
+            sans-serif;
+          color: var(--text-grey);
+          transform: translateY(2px);
 
           &:after {
             content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" viewBox="0 0 16 12" fill="none"><g clip-path="url(%23clip0_11422_907)"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H16V12H0V0Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M0 4H16V11.9999H0V4Z" fill="%230039A6"/><path fill-rule="evenodd" clip-rule="evenodd" d="M0 8H16V12.0001H0V8Z" fill="%23D52B1E"/></g><rect x="0.5" y="0.5" width="15" height="11" rx="3.5" stroke="%23E2E2E2"/><defs><clipPath id="clip0_11422_907"><rect width="16" height="12" rx="4" fill="white"/></clipPath></defs></svg>');
@@ -81,7 +93,8 @@
             position: absolute;
             width: 16px;
             height: 12px;
-            right: -20px;
+            top: -1px;
+            left: 30px;
           }
         }
       }
@@ -131,8 +144,14 @@
 /* дальше первого экрана */
 
 .bb__applying_auto_check {
+  margin-top: 24px;
   padding-top: 24px;
   border-top: 1px solid var(--border-grey);
+
+  &.bb__failed {
+    border-top: none;
+    margin-top: 0;
+  }
 
   & > h5 {
     font: var(--heading5);
