--- a/src/features/modal/ui/styles.module.scss
+++ b/src/features/modal/ui/styles.module.scss
@@ -11,7 +11,9 @@
   max-width: 452px;
   border-radius: 8px;
   overflow: auto;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  box-shadow:
+    0px 4px 13px 0px rgba(26, 44, 79, 0.03),
+    0px 4px 30px 0px rgba(39, 41, 85, 0.05);
   transition: transform var(--transition-speed) ease;
   z-index: 1000;
   transform: scale(0);
