--- a/src/pages/account/ui/account-docs/account-doc/styles.module.scss
+++ b/src/pages/account/ui/account-docs/account-doc/styles.module.scss
@@ -1,11 +1,19 @@
 .bb__req_doc {
-  padding: 16px 24px;
   flex: 1;
   border: 1px solid var(--border-grey);
   border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: var(--bg-grl);
+  }
+
+  & > a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px;
+  }
 
   &_wrap {
     display: flex;
@@ -25,18 +33,19 @@
     font: var(--heading5);
   }
 
-  & > button {
-    color: var(--text-brand);
+  & button {
     display: flex;
     align-items: center;
     gap: 8px;
+    padding: 8px 12px;
+    font: var(--heading5);
 
     & > span {
       width: 18px;
       height: 18px;
       background-repeat: no-repeat;
       background-position: center;
-      background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.69922 15.2998C2.69922 14.8027 3.10216 14.3998 3.59922 14.3998H14.3992C14.8963 14.3998 15.2992 14.8027 15.2992 15.2998C15.2992 15.7969 14.8963 16.1998 14.3992 16.1998H3.59922C3.10216 16.1998 2.69922 15.7969 2.69922 15.2998ZM5.66282 8.36341C6.01429 8.01194 6.58414 8.01194 6.93561 8.36341L8.09922 9.52701V2.6998C8.09922 2.20275 8.50216 1.7998 8.99922 1.7998C9.49627 1.7998 9.89922 2.20275 9.89922 2.6998L9.89922 9.52701L11.0628 8.36341C11.4143 8.01194 11.9841 8.01194 12.3356 8.36341C12.6871 8.71488 12.6871 9.28473 12.3356 9.6362L9.63561 12.3362C9.46683 12.505 9.23791 12.5998 8.99922 12.5998C8.76052 12.5998 8.53161 12.505 8.36282 12.3362L5.66282 9.6362C5.31135 9.28473 5.31135 8.71488 5.66282 8.36341Z" fill="%23064CFF"/></svg>');
+      background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.69922 15.2998C2.69922 14.8027 3.10216 14.3998 3.59922 14.3998H14.3992C14.8963 14.3998 15.2992 14.8027 15.2992 15.2998C15.2992 15.7969 14.8963 16.1998 14.3992 16.1998H3.59922C3.10216 16.1998 2.69922 15.7969 2.69922 15.2998ZM5.66282 8.36341C6.01429 8.01194 6.58414 8.01194 6.93561 8.36341L8.09922 9.52701V2.6998C8.09922 2.20275 8.50216 1.7998 8.99922 1.7998C9.49627 1.7998 9.89922 2.20275 9.89922 2.6998L9.89922 9.52701L11.0628 8.36341C11.4143 8.01194 11.9841 8.01194 12.3356 8.36341C12.6871 8.71488 12.6871 9.28473 12.3356 9.6362L9.63561 12.3362C9.46683 12.505 9.23791 12.5998 8.99922 12.5998C8.76052 12.5998 8.53161 12.505 8.36282 12.3362L5.66282 9.6362C5.31135 9.28473 5.31135 8.71488 5.66282 8.36341Z" fill="%23FFFFFF"/></svg>');
     }
   }
 }
