--- a/src/pages/account/ui/account-loans/account-loans-item/styles.module.scss
+++ b/src/pages/account/ui/account-loans/account-loans-item/styles.module.scss
@@ -1,89 +1,79 @@
 .bb__req_loans_item {
-  padding: 16px 24px;
   flex: 1;
   border: 1px solid var(--border-grey);
   border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  transition: background-color 0.3s ease;
 
-  @media only screen and (max-width: 768px) {
-    flex-direction: column;
-    align-items: stretch;
+  &:hover {
+    background-color: var(--bg-grl);
   }
 
-  &_date {
-    @media only screen and (max-width: 1100px) {
-      display: none;
+  & > a {
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: stretch;
     }
   }
 
   &_info {
     display: flex;
-    gap: 36px;
+    align-items: center;
+
+    @media only screen and (max-width: 1000px) {
+      flex-direction: column;
+      gap: 8px;
+      align-items: flex-start;
+    }
 
     @media only screen and (max-width: 768px) {
       display: block;
       margin-bottom: 12px;
     }
 
-    &_dl {
-      display: flex;
-      flex-direction: column;
-    }
-
-    &_dt {
+    &_loan {
       font: var(--heading5);
+      margin-right: 32px;
     }
 
-    &_dd > a {
-      color: var(--text-brand);
-      font: var(--font-md);
+    &_refund {
+      font: var(--heading6);
+      margin-right: 16px;
+    }
 
-      @media only screen and (max-width: 768px) {
-        font: var(--font-sm);
-      }
-
-      &:hover {
-        text-decoration: underline;
-      }
+    &_term {
+      font: var(--font-sm);
     }
   }
 
   &_refund {
     display: flex;
-    gap: 48px;
+    gap: 8px;
+    align-items: center;
 
     @media only screen and (max-width: 768px) {
       border-top: 1px solid var(--border-grey);
       padding-top: 12px;
-      gap: 0;
-      justify-content: space-between;
     }
 
-    &_dl {
-      display: flex;
-      flex-direction: column;
-    }
+    &_more {
+      padding: 6px 12px;
+      border-radius: 8px;
+      border: 1px solid var(--border-grey);
+      transition: background-color 0.3s ease;
+      background-color: var(--bg-white);
 
-    &_dt {
-      font: var(--heading5);
-    }
-
-    &_dd {
-      font: var(--font-md);
-
-      @media only screen and (max-width: 768px) {
-        font: var(--font-sm);
+      &:hover {
+        background-color: var(--bg-grl);
       }
     }
 
     & > a {
-      padding: 12px 20px;
+      padding: 6px 12px;
     }
-  }
-
-  &_date {
-    font: var(--font-md);
   }
 }
