--- a/src/shared/ui/button/ui/styles.module.scss
+++ b/src/shared/ui/button/ui/styles.module.scss
@@ -68,10 +68,13 @@
 .btn_back {
   padding: 6px 12px;
   font: var(--heading5);
-  margin-bottom: 36px;
   display: flex;
   align-items: center;
   gap: 4px;
+
+  @media only screen and (max-width: 768px) {
+    margin-bottom: 24px;
+  }
 
   & > span:first-child {
     display: inline-block;
