--- a/src/widgets/sidebar/ui/sidebar-item/styles.module.scss
+++ b/src/widgets/sidebar/ui/sidebar-item/styles.module.scss
@@ -6,9 +6,14 @@
     border-radius: 8px;
     width: 100%;
     height: 100%;
+    transition: background-color 0.3s ease;
 
     &.active {
       background-color: var(--brand-light);
+    }
+
+    &:not(.active):hover {
+      background-color: var(--bg-grl);
     }
   }
 }
