--- a/src/shared/ui/input-mask/ui/styles.module.scss
+++ b/src/shared/ui/input-mask/ui/styles.module.scss
@@ -1,6 +1,10 @@
 .bb__input_mask_tel {
   position: relative;
 
+  @media only screen and (max-width: 768px) {
+    margin-bottom: 200px;
+  }
+
   & > span {
     position: absolute;
     top: 13px;
@@ -17,13 +21,17 @@
     border: 1px solid var(--border-grey);
     font: var(--font-md);
 
+    &:hover {
+      border: 1px solid var(--brand-hover);
+    }
+
+    &:focus {
+      border: 1px solid var(--brand-primary);
+    }
+
     &:placeholder {
       font: var(--font-md);
       color: var(--text-grey);
-    }
-
-    @media only screen and (max-width: 768px) {
-      margin-bottom: 200px;
     }
   }
 }
