--- a/src/pages/applying/ui/shared/applying-title/styles.module.scss
+++ b/src/pages/applying/ui/shared/applying-title/styles.module.scss
@@ -3,11 +3,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--border-grey);
     padding: 36px;
 
     @media screen and (max-width: 768px) {
-      padding: 20px 0 24px;
+      padding: 0 0 24px;
     }
 
     & > h2 {
