--- a/src/pages/registration/ui/reg-form/styles.module.scss
+++ b/src/pages/registration/ui/reg-form/styles.module.scss
@@ -44,6 +44,10 @@
     flex-direction: column;
     max-width: 408px;
 
+    @media only screen and (max-width: 768px) {
+      max-width: 100%;
+    }
+
     & label {
       margin-bottom: 8px;
       font: var(--font-md);
