--- a/src/shared/ui/input-mask/ui/styles.module.scss
+++ b/src/shared/ui/input-mask/ui/styles.module.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   @media only screen and (max-width: 768px) {
-    margin-bottom: 200px;
+    width: 100%;
   }
 
   & > span {
