--- a/src/widgets/calculator/ui/styles.module.scss
+++ b/src/widgets/calculator/ui/styles.module.scss
@@ -8,6 +8,7 @@
 
   @media (max-width: 768px) {
     padding: 0 0 28px;
+    margin-top: 80px;
   }
 
   &_wrap {
@@ -116,6 +117,10 @@
     @media only screen and (max-width: 1300px) {
       flex-basis: 400px;
     }
+
+    @media only screen and (max-width: 768px) {
+      padding: 20px 28px;
+    }
   }
 
   &_bottom {
@@ -126,7 +131,7 @@
       gap: 40px;
 
       @media only screen and (max-width: 768px) {
-      gap: 4px;
+        gap: 4px;
       }
     }
   }
