--- a/src/widgets/sidebar/ui/styles.module.scss
+++ b/src/widgets/sidebar/ui/styles.module.scss
@@ -7,9 +7,6 @@
   gap: 4px;
 
   &_mobile {
-    overflow-x: auto;
-    overflow-y: hidden;
-    cursor: grab;
     display: grid;
     grid-gap: 2px;
     grid-template-columns: repeat(5, min-content);
@@ -19,8 +16,28 @@
     border-radius: 6px;
     max-width: 606px;
 
-    &::-webkit-scrollbar {
+    &_wrapper {
       display: none;
+
+      @media only screen and (max-width: 900px) {
+        width: 100vw;
+        overflow-x: auto;
+        overflow-y: hidden;
+        cursor: grab;
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-left: -30px;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
+    }
+
+    &_inner {
+      display: grid;
+      grid-template-columns: auto 30px;
+      transform: translateX(30px);
     }
   }
 }
